<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription"
    tools:context=".DraggingActivity"
    android:orientation="horizontal">

    <org.ros.android.view.RosImageView
        android:id="@+id/imageViewCenter"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:src="@drawable/loading" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/target_cool"
        android:id="@+id/targetView"
        android:alpha="0"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/target"
        android:id="@+id/positionView"
        android:alpha="0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/msgTextView"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignParentLeft="true" />


    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/emergency_on"
        android:textOff="@string/emergency_off"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/emergencyButton"
        android:checked="false"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/targetView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rotateStatus"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/rotating"
        android:textColor="#ff000000"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/moveStatus"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/moving"
        android:textColor="#ff000000"
        android:layout_above="@+id/rotateStatus"
        android:layout_alignLeft="@+id/rotateStatus"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/graspStatus"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/grasping"
        android:textColor="#ff000000"
        android:layout_below="@+id/rotateStatus"
        android:layout_alignLeft="@+id/rotateStatus"
        android:layout_marginTop="20dp"/>


</RelativeLayout>
