<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription"
    tools:context=".ControllerActivity"
    android:orientation="horizontal">

    <org.ros.android.view.RosImageView
        android:id="@+id/visualization"
        android:src="@drawable/loading"
        android:layout_height="match_parent"
        android:layout_width="match_parent" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/target_cool"
        android:id="@+id/imageTarget"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="120dp"
        android:layout_marginBottom="6dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/linearLayout"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_above="@+id/virtual_joystick_pos"
            android:layout_alignRight="@+id/virtual_joystick_pos"
            android:gravity="center_vertical|center_horizontal">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="13dp"
                android:id="@+id/relativeLayout">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/slider_b"
                    android:id="@+id/imageSlider_b"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentLeft="true" />
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:src="@drawable/slider_p"
                    android:id="@+id/imageSlider_p"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true" />

                <ImageView
                    android:id="@+id/sliderControl"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:src="@drawable/empty"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/open_hand"
                    android:id="@+id/graspingOpenTextView"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColor="#ff32a9ff"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/close_hand"
                    android:id="@+id/graspingCloseTextView"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColor="#ff32a9ff"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true" />

            </RelativeLayout>



        </LinearLayout>

        <ualberta.cs.robotics.android_hri.touch_interaction.utils.CustomVirtualJoystickView
            android:id="@+id/virtual_joystick_pos"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true" />

        <ualberta.cs.robotics.android_hri.touch_interaction.utils.CustomVirtualJoystickView
            android:id="@+id/virtual_joystick_rot"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/rotation_control"
            android:id="@+id/rotationTextView"
            android:layout_below="@+id/linearLayout"
            android:layout_alignLeft="@+id/virtual_joystick_rot"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#ffd9d9d9" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/position_control"
            android:id="@+id/positionTextView"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#ffd9d9d9"
            android:layout_gravity="center_vertical"
            android:layout_alignTop="@+id/virtual_joystick_pos"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/virtual_joystick_pos" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/emergency_on"
            android:textOff="@string/emergency_off"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/emergencyButton"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:checked="false"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>